Fix shopping bag padding and btn on small screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -154,6 +154,11 @@ a.category-badge>span.badge:hover {
     width: 20px;
 }
 
+/* Shopping Bag */
+.bag-container {
+    padding-left: 5px;
+    padding-right: 5px;
+}
 
 /* Footer  */
 /* https://www.youtube.com/watch?v=E9eWdZTpiGA - so the footer stays at the bottom*/
@@ -194,6 +199,19 @@ a.text-reset {
 /* Mobile screens */
 
 /* @media only screen and (min-width: 576px) {} */
+@media only screen and (min-width: 576px) {
+    .bag-container {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    .btn-shop {
+        padding: 0.5rem 1rem;
+        font-size: 1.25rem;
+        line-height: 1.5;
+    }
+
+}
 
 /* Medium screen devices (768px and above) */
 @media only screen and (min-width: 768px) {
